# mesh-decimation-benchmark

./: .gitignore  DETAILS.md  README.md  RESULTS.md  analysis_summary.txt  custom_figure.py  data_analysis.py  experiment_results.csv  experiment_runner.py  generate_figures.py  generate_presentation_figures.py  main.py  model_preprocessor.py  pyproject.toml  statistical_analysis.py
Proposal/: Ahnaf-AnNafee-Project-Proposal.fdb_latexmk  Ahnaf-AnNafee-Project-Proposal.fls  Ahnaf-AnNafee-Project-Proposal.tex
Report/: Ahnaf-AnNafee-CS700-Project-Report.aux  Ahnaf-AnNafee-CS700-Project-Report.bbl  Ahnaf-AnNafee-CS700-Project-Report.blg  Ahnaf-AnNafee-CS700-Project-Report.fdb_latexmk  Ahnaf-AnNafee-CS700-Project-Report.fls  Ahnaf-AnNafee-CS700-Project-Report.out  Ahnaf-AnNafee-CS700-Project-Report.tex  references.bib  statistical_summary.txt
Report/sections/: conclusion.tex  discussion.tex  future-work.tex  introduction.tex  methodology.tex  problem-description.tex  related-work.tex  results.tex
decimated_meshes/: 321050-skull_Clustering.obj.mtl
presentation/: slide4_methodology.mmd  slide7_conclusions.mmd
raw_downloads/modelnet40/: airplane_0019.off  airplane_0352.off  chair_0187.off  chair_0230.off  chair_0590.off  guitar_0010.off  guitar_0017.off  guitar_0079.off  guitar_0125.off
raw_downloads/thingi10k/: 286162-dragon.stl  38157-face.stl  86250-minion.stl
